--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -65,7 +65,7 @@
 </div>
 
 <!-- User Information Section -->
-<div class="row mb-4"">
+<div class="row mb-4">
   <!-- Profile Information Card -->
   <div class="col-md-4">
     <div class="card shadow-sm border-0">
